--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "engines": {
     "vscode": "^1.74.0"
   },
+  "repository": {
+    "type": "git", 
+    "url": "https://github.com/wenhoujx/wen-vscode"
+  },
   "categories": [
     "Other"
   ],
@@ -18,6 +22,11 @@
       {
         "command": "wen.remove_leading_whitespace",
         "title": "Remove Leading Whitespace", 
+        "category": "Wen"
+      }, 
+      {
+        "command": "wen.create_branch", 
+        "title": "Create Git Branch", 
         "category": "Wen"
       }
     ]
